--- a/web/public/index.html
+++ b/web/public/index.html
@@ -2,12 +2,14 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="styles.css" />
-  <script src=""></script>
+  <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="app.js"></script>
 </head>
 <body>
   Enter a URL here:
-  <form method="POST">
-    <input type="input" name="url"></input>
+  <form method="POST" id="send">
+    <input type="input" name="url" class="input"/>
+    <input type="submit" name="submit" class="submit"/>
   </form>
 </body>
 </html>
